# rust-kommuner

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs
benches/: bench.rs
ci/: before_deploy.sh  script.sh
examples/data/: sample.csv  sample.geojson
src/: error.rs  geojson.in.rs  lib.rs  main.rs
