[package]
name = "kommuner"
version = "0.1.0"
authors = ["itsdalmo <kristian@doingit.no>"]
build = "build.rs"

[features]
default = ["serde_codegen"]
unstable = ["serde_derive"]

[build-dependencies]
serde_codegen = { version = "0.8", optional = true }

[dependencies]
regex         = "0.1.80"
serde         = "0.8"
serde_derive  = { version = "0.8", optional = true }
serde_json    = "0.8"
